--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mediapipe/pose": "^0.5.1675469404",
+    "@mediapipe/tasks-genai": "^0.10.25",
     "@mui/material": "^5.15.14",
     "@mui/x-charts": "^7.0.0",
     "@reduxjs/toolkit": "^2.2.1",
