--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mediapipe/selfie_segmentation": "^0.1.1675465747",
     "@mediapipe/tasks-genai": "^0.10.25",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@mui/material": "^5.15.14",
